SERVER-75670 Avoid marking excluded fields in projection as 'generated' during pipeline dependency analysis.