jstests/aggregation/optimize_away_pipeline.js
@@ -715,7 +715,7 @@ assertPipelineUsesAggregation({
 explain = coll.explain().aggregate(pipeline);
 projStage = getAggPlanStage(explain, "PROJECTION_SIMPLE");
 assert.neq(null, projStage, explain);
-assertTransformByShape({b: 1, _id: 0}, projStage.transformBy, explain);
+assertTransformByShape({a: 1, b: 1, _id: 0}, projStage.transformBy, explain);
 
 // Test that an exclusion projection at the front of the pipeline is pushed down if there is no
 // finite dependency set.
